--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link href="/css/tailwind.css" rel="stylesheet" />
+    <!-- <link href="/css/tailwind.css" rel="stylesheet" /> -->
+    <link href="/css/build.css" rel="stylesheet" />
     <script defer src="myScript.js"></script>
 </head>
 <body class="font-sans overflow-y-scroll overflow-x-hidden" id="body" onload="hideLoader(); slideHeader();" onscroll="smallHeader(); slideHeader();">
