--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akayik</title>
-    <link href="/css/tailwind.css" rel="stylesheet" />
+    <!-- <link href="/css/tailwind.css" rel="stylesheet" /> -->
+    <link href="/css/build.css" rel="stylesheet" />
     <script defer src="myScript.js"></script>
     <script defer src="script/testimonial.js"></script>
 </head>
