--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             slidesToShow: 1,
             slidesToScroll: 1,
             dots: true,
-            autoplay: false,
+            autoplay: true,
             autoplaySpeed: 6000,
             infinite: true,
             prevArrow: '',
