Working on lightbox

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About</title>
     <!-- <link href="/css/tailwind.css" rel="stylesheet" /> -->
     <link href="/css/build.css" rel="stylesheet" />
-    <script defer src="myScript.js"></script>
+    <script defer src="script/myScript.js"></script>
 </head>
 <body class="font-sans overflow-y-scroll overflow-x-hidden" id="body" onload="hideLoader(); slideHeader();" onscroll="smallHeader(); slideHeader();">
 
