--- a/case.html
+++ b/case.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case</title>
-    <!-- <link href="/css/tailwind.css" rel="stylesheet" /> -->
+    <link href="/css/tailwind.css" rel="stylesheet" />
     <link href="/css/build.css" rel="stylesheet" />
-    <script defer src="myScript.js"></script>
+    <script defer src="script/myScript.js"></script>
 </head>
 <body class="font-sans overflow-y-scroll overflow-x-hidden" id="body" onload="hideLoader(); slideHeader();" onscroll="smallHeader(); slideHeader(); caseHeaderBg();">
 
@@ -151,9 +151,9 @@
         </div>
     </div>
 
-    <div class="bg-white px-8 pt-8 pb-8 overflow-x-clip sm:px-28 lg:pb-20 lg:pt-0 lg:px-14 lg:grid lg:grid-cols-12 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
+    <div class="bg-white px-8 pt-8 pb-8 overflow-x-clip sm:px-28 lg:pb-20 lg:pt-0 lg:px-14 grid grid-cols-1 lg:grid-cols-12 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
         
-        <div class="lg:col-span-5 place-self-start b-red-600 lg:sticky lg:top-0 lg:pt-20">
+        <div class="col-span-1 lg:col-span-5 place-self-start lg:sticky lg:top-0 lg:pt-20">
 
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 lg:col-span-12 xl:text-xl xl:mb-4">Approach</h3>
             <div>
@@ -163,7 +163,7 @@
 
         </div>
 
-        <div class="lg:col-span-6 lg:col-start-7 lg:pl-4 lg:border-l-4 overflow-clip lg:mt-32">
+        <div class="col-span-1 lg:col-span-6 lg:col-start-7 lg:pl-4 lg:border-l-4 overflow-clip lg:mt-32">
 
             <div>
                 <div class="border-t-2 border-b-2 py-2 flex justify-between items-center lg:py-0 lg:border-0" id="heading1" onclick="accordion(this.id);" >
@@ -182,15 +182,17 @@
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content2">
                     <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg">The presentation of the content was the make or break. It was essential for us to nail it or risk potential clients. So thorough research was conducted, a mood board was created and style frames were explored before we settled on the final look and feel.</p>
-                    <div class="mt-8 flex">
-                        <img class="w-56 pr-3" src="img/mem-website.jpg" alt="">
-                        <img class="w-56 pr-3" src="img/mem-website.jpg" alt="">
-                        <img class="w-56 pr-3" src="img/mem-website.jpg" alt="">
+                    <div class="mt-8 flex overflow-x-auto lg:overflow-hidden">
+                        <img class="h-32 m3:h-48 md:h-40 pr-3" src="img/mem-website.jpg" alt="">
+                        <img class="h-32 m3:h-48 md:h-40 pr-3" src="img/mem-website.jpg" alt="">
+                        <img class="h-32 m3:h-48 md:h-40 pr-3" src="img/mem-website.jpg" alt="">
                     </div>
                      <p class="mt-2 mb-3 text-sm italic text-gray-400 text-center xl:text-base lg:mb-0">Some screengrabs from the old website of My Emotions Matter</p>
                 </div>
             </div>
+
         </div>
+
     </div>
 
     <div class="bg-white pt-2 pb-8 px-8 sm:px-28 sm:overflow-x-hidden lg:grid lg:grid-cols-12 lg:px-14 lg:py-20 lg:pb-32 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
@@ -200,7 +202,7 @@
             <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">The final outcome has been a rewarding experience. A minimal website was created with clear navigational patterns to guide the users based on their requirements. The company has seen significant growth in the quality of its leads and a noticeable improvement in its interactions with its clients. The clients have more clarity on what they want and what offerings they seek. </p>
         </div>
         <div class="lg:col-span-12">
-            <div class="flex flex-wrap sm:flex-nowrap">
+            <div class="flex flex-wrap sm:flex-nowrap overflow-x-auto lg:overflow-hidden">
                 <img class="py-2 basis-full sm:w-80 sm:pr-3 lg:w-1/3" src="img/mem-website.jpg" alt="">
                 <img class="py-2 basis-full sm:w-80 sm:pr-3 lg:w-1/3" src="img/mem-website.jpg" alt="">
                 <img class="py-2 basis-full sm:w-80 sm:pr-3 lg:w-1/3" src="img/mem-website.jpg" alt="">
