--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Akayik</title>
     <!-- <link href="/css/tailwind.css" rel="stylesheet" /> -->
     <link href="/css/build.css" rel="stylesheet" />
-    <script defer src="myScript.js"></script>
+    <script defer src="script/myScript.js"></script>
     <script defer src="script/testimonial.js"></script>
     <link rel="stylesheet" href="/css/testimonial.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
@@ -217,8 +217,6 @@
         </div>
     </div>
         
-    </div>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
