--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akayik</title>
-    <!-- <link href="/css/tailwind.css" rel="stylesheet" /> -->
+    <!-- Tailwind Stylesheet -->
+    <link href="/css/tailwind.css" rel="stylesheet" />
+    <!-- Tailwind build stylesheet -->
     <link href="/css/build.css" rel="stylesheet" />
+    <!-- Custom javascript -->
     <script defer src="script/myScript.js"></script>
+    <!-- Javascript for the testimonial section -->
     <script defer src="script/testimonial.js"></script>
+    <!-- Stylesheet for the testimonial section -->
     <link rel="stylesheet" href="/css/testimonial.css">
+    <!-- CDN for two slick slider css -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"/>
 
 </head>
+
 <body class="font-sans overflow-hidden overflow-x-hidden" id="body" onload="hideLoader(); slideHeader(); testimonialWidthResize();" onscroll="smallHeader(); slideHeader();" onresize="testimonialWidthResize();">
 
+    <!-- Preloader Starts -->
     <div class="bg-akayik-900 absolute top-0 left-0 z-[100] transition-transform duration-300" id="loader">
         <div class="flex h-screen items-center justify-center w-screen gap-0">
             <div class="w-40 md:w-48">
@@ -30,7 +38,10 @@
             </div>
         </div>
     </div>
+    <!-- Preloader Ends -->
 
+
+    <!-- Full Navigation Menu Starts. Is translated out of the screen. Is brought inside when the hamburger icon is pressed. -->
     <div class="bg-akayik-900 font-sans fixed w-screen h-screen z-50 -translate-y-full transition-transform duration-300 ease-linear" id="fullNav">
       
         <div class="top-0 w-screen px-8 py-8 grid grid-cols-2 sm:px-28 lg:px-14 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
@@ -40,15 +51,17 @@
 
         <div class="px-8 sm:px-28 lg:px-14 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto text-white mt-4 grid grid-cols-2 lg:grid-cols-12 lg:mt-8">
 
+            <!-- Website Navigaiton Links -->
             <div class="col-span-1 order-1 md:order-2 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Links</h1>
                 <menu>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li>
+                    <a href="index.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
                     <a href="about.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li>
+                    <a href="about.html#contactInformation"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
                 </menu>
             </div>
 
+            <!-- Contact Links -->
             <div class="col-span-1 ml-4 order-2 md:order-3 lg:ml-0 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Contact</h1>
                 <menu>
@@ -58,10 +71,11 @@
                 </menu>
             </div>
 
+            <!-- Case Study Links -->
             <div class="col-span-2 order-3 md:order-1  md:mb-16 lg:row-span-2 lg:col-span-8">
-                <h1 class="text-xl font-bold lg:text-3xl mb-4 mt-8 md:mt-0 md:mb-8 lg:mb-10">Recent Work</h1>
+                <h1 class="text-xl font-bold lg:text-3xl mb-4 mt-8 md:mt-0 md:mb-8 lg:mb-10">Recent Case Studies</h1>
                 <menu>
-                    <a class="block">
+                    <a class="block" href="channel-simplify-SaaS.html">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Channel Simplify
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -69,7 +83,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">SaaS Product Design</span>
                         </li>
                     </a>
-                    <a class="block">
+                    <a class="block" href="OGB-connect-product-design.html">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         OGB: Connect
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -77,7 +91,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Product Design</span>
                         </li>
                     </a>
-                    <a class="block">
+                    <a class="block" href="super-krishak-system-design.html">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Super Krishak
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -85,7 +99,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">System Design</span>
                         </li>
                     </a>
-                    <a class="block">
+                    <a class="block" href="my-emotions-matter-website-redesign.html">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         My Emotions Matter
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -93,7 +107,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Website Re-design</span>
                         </li>
                     </a>
-                    <a class="block">
+                    <a class="block" href="off-grid-bazaar-project-management.html">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Off Grid Bazaar
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -106,26 +120,32 @@
         </div>
 
     </div>
+    <!-- Full Navigation Menu ends -->
 
+
+    <!-- Main Page starts -->
     <div>        
+        
+        <!-- Header Starts -->
         <div class="w-screen z-30 px-8 py-8 fixed -top-24 sm:px-28 lg:px-14 xl:px-20  bg-white drop-shadow-lg 2xl:mx-auto transition-all duration-500" id="header">
             <div class="grid grid-cols-2 2xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
                 <a href="index.html" class="col-span-1"><img class="mr-auto my-auto w-24" src="img/logo-blue.svg" alt=""></a>
                 <img class="h-5 my-auto col-span-1 justify-self-end cursor-pointer" onclick="openNav();" src="img/burger-blue.svg" alt="">
             </div>
-        </div>
+        </div>                                                                                                                                                                                                                                                        
+        <!-- Header Ends -->
 
         <div class="px-8 pt-36 pb-4 grid grid-cols-1 sm:px-28 lg:px-14 lg:pb-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
             <div class="text-center lg:grid lg:grid-cols-12">
                 <p class="text-lg text-gray-500 font-semibold xl:text-xl lg:col-span-4 lg:col-start-5">Hi there. I am Apurba 👋</p>
-                <h1 class="text-3xl text-akayik-900 font-medium xl:text-4xl lg:col-span-6 lg:col-start-4">I am a <span class="font-bold">UI Designer</span></h1>
+                <h1 class="text-3xl text-akayik-900 font-medium xl:text-4xl lg:col-span-6 lg:col-start-4">I am a <span class="font-bold">UX Designer</span></h1>
                 <p class="mt-6 text-gray-700 text-base xl:text-lg lg:col-span-8 lg:col-start-3">I have been designing minimal, goal driven products and interfaces since 2018. I enjoy balancing user needs and business needs to create problem oriented human-centered designs.</p>
             </div>
         </div>
 
         <div class="mx-8 my-8 grid grid-cols-1 sm:mx-28 lg:grid-cols-12 lg:mx-14 lg:my-0 xl:mx-0 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto lg:grid-rows-3 lg:auto-rows-max lg:gap-5 lg:h-[90%]">
 
-            <a class="relative mb-6 lg:mb-0 lg:col-span-7 lg:row-span-2" href="case.html">
+            <a class="relative mb-6 lg:mb-0 lg:col-span-7 lg:row-span-2" href="channel-simplify-SaaS.html">
                 <div>
                     <div class="bg-[#862a97]/70 text-white absolute left-0 bottom-0 lg:top-0 lg:bg-[#862a97]/50 lg:hover:bg-[#862a97]/0 hover:duration-700 z-0 w-full px-4 py-4 lg:px-8 lg:py-6">
                         <p class="font-bold text-xl lg:text-2xl">Channel Simplify</p>
@@ -136,7 +156,7 @@
                 </div>
             </a>
 
-            <a class="relative mb-6 lg:mb-0 lg:col-span-5 lg:row-span-1">
+            <a class="relative mb-6 lg:mb-0 lg:col-span-5 lg:row-span-1" href="OGB-connect-product-design.html">
                 <div>
                     <div class="bg-[#FF8B45]/70 text-white absolute left-0 bottom-0 lg:top-0 lg:bg-[#FF8B45]/50 lg:hover:bg-[#FF8B45]/0 hover:duration-700 z-0 w-full px-4 py-4 lg:px-8 lg:py-6">
                         <p class="font-bold text-xl lg:text-2xl">OGB: Connect</p>
@@ -146,7 +166,7 @@
                 </div>
             </a>
 
-            <a class="relative mb-6 lg:mb-0 lg:col-span-5 lg:row-span-1">
+            <a class="relative mb-6 lg:mb-0 lg:col-span-5 lg:row-span-1" href="super-krishak-system-design.html">
                 <div>
                     <div class="bg-[#4aa0d9]/70 text-white absolute left-0 bottom-0 lg:top-0 lg:bg-[#4aa0d9]/50 lg:hover:bg-[#4aa0d9]/0 hover:duration-700 z-0 w-full px-4 py-4 lg:px-8 lg:py-6">
                         <p class="font-bold text-xl lg:text-2xl">Super Krishak</p>
@@ -156,7 +176,7 @@
                 </div>
             </a>
 
-            <a class="relative mb-6 lg:mb-0 lg:col-span-6 lg:row-span-1">
+            <a class="relative mb-6 lg:mb-0 lg:col-span-6 lg:row-span-1" href="my-emotions-matter-website-redesign.html">
                 <div>
                     <div class="bg-[#f1a513]/70 text-white absolute left-0 bottom-0 lg:top-0 lg:bg-[#f1a513]/50 lg:hover:bg-[#f1a513]/0 hover:duration-700 z-0 w-full px-4 py-4 lg:px-8 lg:py-6">
                         <p class="font-bold text-xl lg:text-2xl">My Emotions Matter</p>
@@ -166,7 +186,7 @@
                 </div>
             </a>
 
-            <a class="relative mb-6 lg:mb-0 lg:col-span-6 lg:row-span-1">
+            <a class="relative mb-6 lg:mb-0 lg:col-span-6 lg:row-span-1" href="off-grid-bazaar-project-management.html">
                 <div>
                     <div class="bg-[#366bbb]/70 text-white absolute left-0 bottom-0 lg:top-0 lg:bg-[#366bbb]/50 lg:hover:bg-[#366bbb]/0 hover:duration-700 z-0 w-full px-4 py-4 lg:px-8 lg:py-6">
                         <p class="font-bold text-xl lg:text-2xl">Off Grid Bazaar</p>
@@ -181,7 +201,7 @@
         <div class="px-8 pb-4 sm:px-28 lg:pt-14 lg:pb-12 lg:px-10 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
             <div class="text-center lg:px-40">
                 <p class="text-gray-700 text-base lg:text-sm xl:text-lg pb-4 lg:col-span-10 lg:col-start-2 noHeight">I have been working in the field of <b>Digital Graphics, Logo Design, Branding, and Interface Design</b> at various levels since 2013. I have enojoyed tackling every brief as a problem to be solved and I love learning new things and implementing them into my process to serve people better.</p>
-                <a class="text-gray-500 block pb-10 lg:pb-4 lg:col-span-4 lg:col-start-5 mt-8" href="#"><u>More about me</u></a>
+                <a class="text-gray-500 block pb-10 lg:pb-4 lg:col-span-4 lg:col-start-5 mt-8" href="about.html"><u>More about me</u></a>
             </div>
         </div>
 
